<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/app_background"
    android:padding="@dimen/dp_1"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tv_sd_one"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:text="@string/sdcard_one"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dp_20"
        android:paddingEnd="@dimen/dp_20"
        android:textSize="@dimen/sp_15"
        android:textColor="@color/font_color_666"/>
    <TextView
        android:id="@+id/tv_sd_two"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:text="@string/sdcard_two"
        android:gravity="center_vertical"
        android:textSize="@dimen/sp_15"
        android:paddingStart="@dimen/dp_20"
        android:paddingEnd="@dimen/dp_20"
        android:textColor="@color/font_color_666"/>
    <TextView
        android:id="@+id/tv_sata"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:text="@string/sata"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dp_20"
        android:paddingEnd="@dimen/dp_20"
        android:textSize="@dimen/sp_15"
        android:textColor="@color/font_color_666"/>
    <TextView
        android:id="@+id/tv_usb"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:text="@string/usb"
        android:gravity="center_vertical"
        android:textSize="@dimen/sp_15"
        android:paddingStart="@dimen/dp_20"
        android:paddingEnd="@dimen/dp_20"
        android:textColor="@color/font_color_666"/>
</LinearLayout>