<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SettingsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:background="@color/system_navigation_bar_color">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/icon_back"
            android:layout_marginStart="@dimen/dp_10"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="@dimen/sp_18"
            android:textColor="@android:color/white"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_10"
        android:background="@android:color/white"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_2"
        android:background="@color/split_line_color"/>
    <TextView
        android:id="@+id/tv_speed_set"
        style="@style/tvTextShow"
        android:layout_height="@dimen/dp_45"
        android:text="@string/speed_set"
        android:textSize="@dimen/sp_15"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_2"
        android:background="@color/split_line_color"/>
    <TextView
        android:id="@+id/tv_video_set"
        style="@style/tvTextShow"
        android:layout_height="@dimen/dp_45"
        android:text="@string/video_set"
        android:textSize="@dimen/sp_15"/>


    <View
       style="@style/DividerLineStyle"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_10"
        android:background="@android:color/white"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_2"
        android:background="@color/split_line_color"/>
    <TextView
        android:id="@+id/tv_warning_set"
        style="@style/tvTextShow"
        android:layout_height="@dimen/dp_45"
        android:text="@string/active_security_settings"
        android:textSize="@dimen/sp_15"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_2"
        android:background="@color/split_line_color"/>
    <TextView
        android:id="@+id/tv_calibration_set"
        style="@style/tvTextShow"
        android:layout_height="@dimen/dp_45"
        android:text="@string/calibration_set"
        android:textSize="@dimen/sp_15"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_2"
        android:background="@color/split_line_color"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_10"
        android:background="@android:color/white"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_2"
        android:background="@color/split_line_color"/>
    <TextView
        android:id="@+id/tv_common_set"
        style="@style/tvTextShow"
        android:layout_height="@dimen/dp_45"
        android:text="@string/common_set"
        android:textSize="@dimen/sp_15"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_2"
        android:background="@color/split_line_color"/>
    <TextView
        android:id="@+id/tv_can_set"
        style="@style/tvTextShow"
        android:layout_height="@dimen/dp_45"
        android:text="@string/can_settings"
        android:textSize="@dimen/sp_15"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_2"
        android:background="@color/split_line_color"/>
    <TextView
        android:id="@+id/tv_network_set"
        style="@style/tvTextShow"
        android:layout_height="@dimen/dp_45"
        android:text="@string/network_set"
        android:textSize="@dimen/sp_15"/>

</LinearLayout>