<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ll_bg_rectangle_style"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_reboot"
        android:textStyle="bold"
        android:paddingTop="@dimen/dp_18"
        android:paddingBottom="@dimen/dp_20"
        android:gravity="center"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/font_color_333"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reboot_description"
        android:gravity="center"
        android:paddingStart="@dimen/dp_19"
        android:paddingEnd="@dimen/dp_20"
        android:textSize="@dimen/sp_16"
        android:paddingBottom="@dimen/dp_10"
        android:textColor="@color/font_color_333"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0.5"
        android:background="@color/under_line_color"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50">
        <TextView
            android:id="@+id/tv_cancel_reboot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:gravity="center"
            android:textColor="@color/font_color_333"
            android:textSize="@dimen/sp_16"/>
        <View
            android:layout_width="@dimen/dp_0.5"
            android:layout_height="match_parent"
            android:background="@color/under_line_color"/>
        <TextView
            android:id="@+id/tv_confirm_reboot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:gravity="center"
            android:textColor="@color/system_navigation_bar_color"
            android:textSize="@dimen/sp_16"/>
    </LinearLayout>
</LinearLayout>