<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:gravity="center_vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_gravity="center_vertical">
    <Button
        android:id="@+id/btn_sub"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        android:background="@drawable/btn_bg_left_style"
        android:gravity="center"
        android:text="@string/sub"
        android:textColor="@color/font_color_999"
        android:textSize="@dimen/sp_15"/>
    <EditText
        android:id="@+id/et_error_number"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        android:text="@string/default_number"
        android:gravity="center"
        android:layout_marginLeft="@dimen/dp_1"
        android:layout_marginRight="@dimen/dp_1"
        android:inputType="number"
        android:textColor="@color/font_color_333"
        android:background="@drawable/btn_bg_rectangle_style"
        android:textSize="@dimen/sp_15"/>
    <Button
        android:id="@+id/btn_add"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        android:background="@drawable/btn_bg_right_style"
        android:gravity="center"
        android:text="@string/add"
        android:textColor="@color/font_color_999"
        android:textSize="@dimen/sp_15"/>
</LinearLayout>