<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_10"
        android:background="@color/under_line_color"/>
    <LinearLayout
        style="@style/LinearLayoutImageDisplayDataStyle">
        <TextView
            android:id="@+id/tv_warning_type"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/vehicle_collision_warning"
            android:textSize="@dimen/sp_16"
            android:gravity="center_vertical"
            android:textColor="@color/font_color_333"/>

        <ImageView
            android:id="@+id/iv_warning_type_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/switch_open_icon"
            android:visibility="visible" />

    </LinearLayout>
    <View style="@style/UnderLineStyle"/>

    <LinearLayout
        style="@style/LinearLayoutImageDisplayDataStyle">
        <TextView
            android:id="@+id/tv_sensitivity"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sensitivity"
            android:textSize="@dimen/sp_16"
            android:gravity="center_vertical"
            android:textColor="@color/font_color_333"/>
        <RadioGroup
            android:id="@+id/rg_sensitivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rb_sensitivity_low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low"
                android:buttonTint="@color/system_navigation_bar_color"
                android:textColor="@color/font_color_333"
                android:drawablePadding="@dimen/dp_5"/>
            <RadioButton
                android:id="@+id/rb_sensitivity_middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/middle"
                android:buttonTint="@color/system_navigation_bar_color"
                android:textColor="@color/font_color_333"
                android:checked="true"
                android:layout_marginStart="@dimen/dp_20"
                android:drawablePadding="@dimen/dp_5"/>
            <RadioButton
                android:id="@+id/rb_sensitivity_high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high"
                android:buttonTint="@color/system_navigation_bar_color"
                android:textColor="@color/font_color_333"
                android:layout_marginStart="@dimen/dp_20"
                android:drawablePadding="@dimen/dp_5"/>
        </RadioGroup>
    </LinearLayout>
    <View style="@style/UnderLineStyle"/>

    <LinearLayout style="@style/LinearLayoutImageDisplayDataStyle">

        <TextView
            android:id="@+id/tv_minimum_speed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/dp_12"
            android:paddingBottom="@dimen/dp_12"
            android:text="@string/minimum_speed"
            android:textColor="@color/font_color_333"
            android:textSize="@dimen/sp_16" />

        <include
            layout="@layout/include_add_or_sub_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/under_line_color"/>
</LinearLayout>