<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_80"
       android:text="@string/factory_data_reset_description"
        android:gravity="center"
        android:textSize="@dimen/sp_15"
        android:textColor="@android:color/black"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0.5"
        android:background="@color/split_line_color"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40">
        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_15"/>
        <View
            android:layout_width="@dimen/dp_0.5"
            android:layout_height="match_parent"
            android:background="@color/split_line_color"/>
        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:gravity="center"
            android:textColor="@color/system_navigation_bar_color"
            android:textSize="@dimen/sp_15"/>
    </LinearLayout>
</LinearLayout>