<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical"
    tools:context=".set.activity.CommonSetActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_common_back"
            style="@style/CommonTitleImageBackStyle" />

        <TextView
            style="@style/CommonTitleTvStyle"
            android:text="@string/common_set" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_2"
        android:background="@color/split_line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_time_set"
            style="@style/LinearLayoutDisplayDataStyle">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/time_settings_icon"
                android:drawablePadding="@dimen/dp_8"
                android:text="@string/time_set"
                android:textColor="@color/font_color_333"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableRight="@mipmap/right_arrow" />
        </LinearLayout>

        <View style="@style/UnderLineStyle" />

        <LinearLayout
            android:id="@+id/ll_sound_set"
            style="@style/LinearLayoutDisplayDataStyle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/sound_settings_icon"
                android:drawablePadding="@dimen/dp_8"
                android:text="@string/sound_set"
                android:textColor="@color/font_color_333"
                android:textSize="@dimen/sp_16" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableRight="@mipmap/right_arrow" />
        </LinearLayout>

        <View style="@style/UnderLineStyle" />
        <LinearLayout
            android:id="@+id/ll_dormancy_set"
            style="@style/LinearLayoutDisplayDataStyle">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/dormancy_settings_icon"
                android:drawablePadding="@dimen/dp_8"
                android:text="@string/dormancy_set"
                android:textColor="@color/font_color_333"
                android:textSize="@dimen/sp_16" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableRight="@mipmap/right_arrow" />
        </LinearLayout>
        <View style="@style/UnderLineStyle" />
        <LinearLayout
            android:id="@+id/ll_reboot_set"
            style="@style/LinearLayoutDisplayDataStyle">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/reboot_settings_icon"
                android:drawablePadding="@dimen/dp_8"
                android:text="@string/reboot_set"
                android:textColor="@color/font_color_333"
                android:textSize="@dimen/sp_16" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableRight="@mipmap/right_arrow" />
        </LinearLayout>
        <View style="@style/UnderLineStyle" />
        <LinearLayout
            android:id="@+id/ll_device_format"
            style="@style/LinearLayoutDisplayDataStyle">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/device_format_icon"
                android:drawablePadding="@dimen/dp_8"
                android:text="@string/device_format"
                android:textColor="@color/font_color_333"
                android:textSize="@dimen/sp_16" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableRight="@mipmap/right_arrow" />
        </LinearLayout>

        <View style="@style/UnderLineStyle" />
        <LinearLayout
            android:id="@+id/ll_factory_data_reset"
            style="@style/LinearLayoutDisplayDataStyle">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/factory_data_reset_icon"
                android:drawablePadding="@dimen/dp_8"
                android:text="@string/factory_data_reset"
                android:textColor="@color/font_color_333"
                android:textSize="@dimen/sp_16" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableRight="@mipmap/right_arrow" />
        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_2"
        android:background="@color/split_line_color" />
</LinearLayout>